--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,75 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Highlight code blocks theme */
+pre {
+  background: rgb(20, 20, 20);
+  border-radius: 0.5rem;
+  color: rgb(220, 220, 220);
+  margin: 1.5rem 0;
+  padding: 0.75rem 1rem;
+
+  code {
+    font-family: var(--font-mono);
+    background: none;
+    color: inherit;
+    font-size: 0.8rem;
+    padding: 0;
+  }
+
+  /* Code styling based on Night Wolf Black theme */
+  .hljs-comment,
+  .hljs-quote {
+    font-family: var(--font-mono-italic);
+    font-style: italic;
+    color: rgb(140, 140, 140);
+  }
+
+  .hljs-variable,
+  .hljs-template-variable,
+  .hljs-attribute,
+  .hljs-tag,
+  .hljs-name,
+  .hljs-regexp,
+  .hljs-link,
+  .hljs-name,
+  .hljs-selector-id,
+  .hljs-selector-class {
+    color: #ff6b6b;
+  }
+
+  .hljs-number,
+  .hljs-meta,
+  .hljs-built_in,
+  .hljs-builtin-name,
+  .hljs-literal,
+  .hljs-type,
+  .hljs-params {
+    color: #ffd700;
+  }
+
+  .hljs-string,
+  .hljs-symbol,
+  .hljs-bullet {
+    color: #98fb98;
+  }
+
+  .hljs-title,
+  .hljs-section {
+    color: #00bfff;
+  }
+
+  .hljs-keyword,
+  .hljs-selector-tag {
+    color: #ff69b4;
+  }
+
+  .hljs-emphasis {
+    font-style: italic;
+  }
+
+  .hljs-strong {
+    font-weight: 700;
+  }
+}
